Se agrega historial

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                 <p>No tienes tareas pendientes...</p>
             </div>
         </div>
-
+        <div class="historial">
+        </div>
         
         <script src="./main.js" async defer></script>
     </body>
